--- a/MyEcommerceWebsite/MyEcommerceWebsite/Views/Signup/CreateAccount.cshtml
+++ b/MyEcommerceWebsite/MyEcommerceWebsite/Views/Signup/CreateAccount.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-controller="Home" asp-action="Index">Back to Home Page</a>
+    <a asp-controller="Login" asp-action="Index">Back to Login Page</a>
 </div>
 
 @section Scripts {
