--- a/MyEcommerceWebsite/MyEcommerceWebsite/Views/Home/Index.cshtml
+++ b/MyEcommerceWebsite/MyEcommerceWebsite/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <a asp-controller="Shop" asp-action="Index" class="btn btn-primary">Let's Go</a>
+                        <a asp-controller="Shop" asp-ac asp-action="Index" class="btn btn-primary">Let's Go</a>
                     </div>
                 </div>
             </div>
