Finished Order Section

--- a/MyEcommerceWebsite/MyEcommerceWebsite/Views/Shop/Products.cshtml
+++ b/MyEcommerceWebsite/MyEcommerceWebsite/Views/Shop/Products.cshtml
@@ -11,8 +11,13 @@
         <h2 class="text-primary">Availabe Products</h2>
     </div>
     <div class="col-6 text-right">
-        <a asp-action="Index" asp-controller="Shop"  class="btn btn-primary">
+        <a asp-action="Index" asp-controller="Shop" class="btn btn-primary">
             <i class="fas fa-plus"></i> &nbsp;Back
+        </a>
+    </div>
+    <div class="col-6">
+        <a asp-action="OrderReview" asp-controller="Shop" class="btn btn-primary">
+            <i class="fas fa-plus"></i> &nbsp;Order Review
         </a>
     </div>
 </div>
