--- a/MyEcommerceWebsite/MyEcommerceWebsite/Views/OrderHistory/Index.cshtml
+++ b/MyEcommerceWebsite/MyEcommerceWebsite/Views/OrderHistory/Index.cshtml
@@ -5,20 +5,19 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome @Html.DisplayFor(customer => customer.Fname) @Html.DisplayFor(customer => customer.Lname)</h1>
-    <p class="h2"><small class="text-muted">What are we doing today?</small></p>
+    <p class="h2"><small class="text-muted"> Which orders are we looking for?</small></p>
 </div>
 
 <br />
-
 <div class="col d-flex justify-content-center">
     <div class="card w-50 h-25">
         <div class="card-body">
-            <h5 class="text-center card-title">Shopping</h5>
-            <p class="card-text">Let's Go Shopping. Here we will be able do all of the online shopping from any store we have availabe</p>
+            <h5 class="text-center card-title">By Store</h5>
+            <p class="card-text text-center">View Order History By Stores. Choose from all avaible location that we have availabe</p>
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <a asp-controller="Shop" asp-ac asp-action="Index" class="btn btn-primary">Let's Go</a>
+                        <a asp-controller="OrderHistory" asp-ac asp-action="HistoryByStore" class="btn btn-primary">Let's Go</a>
                     </div>
                 </div>
             </div>
@@ -31,12 +30,12 @@
 <div class="col d-flex justify-content-center">
     <div class="card w-50 h-25">
         <div class="card-body">
-            <h5 class="text-center card-title">View Order History</h5>
-            <p class="card-text">You can view your past history order(s). Or be able to view past orders by store.</p>
+            <h5 class="text-center card-title">Your Order History</h5>
+            <p class="card-text text-center">You can View Your Own Personal Order History.</p>
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <a asp-controller="OrderHistory" asp-ac asp-action="Index" class="btn btn-primary">Let's Go</a>
+                        <a asp-controller="OrderHistory" asp-ac asp-action="CustomerOrders" class="btn btn-primary">Let's Go</a>
                     </div>
                 </div>
             </div>
@@ -49,14 +48,12 @@
 <div class="col d-flex justify-content-center">
     <div class="card w-50 h-25">
         <div class="card-body">
-            <h5 class="text-center card-title">Search Customer</h5>
-            <p class="card-text">The Search Customer. Some real shady stuff here
-             we can see all of customer information and be able to track them down, or not your choice!
-            </p>
+            <h5 class="text-center card-title">All Orders</h5>
+            <p class="card-text text-center"> View Everyones Order History </p>
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a asp-controller="OrderHistory" asp-ac asp-action="AllOrders" class="btn btn-primary">Let's Go</a>
                     </div>
                 </div>
             </div>
@@ -64,9 +61,8 @@
     </div>
 </div>
 
-<br/>
-
+<br />
 
 <div class="text-center">
-    <p class="text-center"><a asp-controller="Login" asp-action="Index">Signout</a></p>
+    <p class="text-center"><a asp-controller="Home" asp-action="Index">Home Page</a></p>
 </div>
