--- a/MyEcommerceWebsite/MyEcommerceWebsite/Views/Home/Index.cshtml
+++ b/MyEcommerceWebsite/MyEcommerceWebsite/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col text-center">
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a asp-controller="CustomerSearch" asp-ac asp-action="Index" class="btn btn-primary">Let's Go</a>
                     </div>
                 </div>
             </div>
